Jython NEWS

Jython 2.2.2 rc1
  Bugs fixed
    - [ 1806980 ] os.path.join ignores empty string
    - [ 1744567 ] Simultaneous read & write on socket FileWrapper causes hang
    - [ 1831710 ] PyFileCloser throws NullPointerException on shutdown
    - [ 1817908 ] Broken link for corner icon in html documentation
    - [ 1850722 ] socket.py - ClientCookie and ClientForm (and urllib2)
    - [ 1841445 ] PythonInterpreter.get(String name, Class javaclass) throws 
    an NPE if name isn't defined
    - [ 1839871 ] dict calls __setitem__ on subclasses in initialization
    - [ 1816134 ] str uses its own __eq__ instead of deferring to subclasses
    - [ 1796425 ] os.renames missing
    - [ 1796415 ] os.removedirs missing
    - [ 1814678 ] os.__all__ missing many functions
    - [ 1812122 ] NullPointerException when rethrowing an exception
    - [ 1830916 ] PyException doesn't store causal Java exception

Jython 2.2.1
  Identical to 2.2.1 rc2

Jython 2.2.1 rc2
  Bugs fixed
    - Python files are parsed using the JVM's default encoding
    - [ 1800378 ] __unicode__ ignored on subclasses of builtin types
    - [ 1801802 ] JavaImportHelper not thread safe
    - python.console.encoding is silently ignored if the JVM doesn't support the given encoding

Jython 2.2.1 rc1
  Bugs fixed
    - Reading and writing on files would run data through the JVM's default charset
    - Include the row number where an exception occured while using a zxJDBC cursor
    - [ 1766527 ] in keyword doesn't work on os.environ
    - [ 1767194 ] xmllib applies default namespace to attributes incorrectly
    - [ 1768074 ] str.replace doesn't handle an empty string to be replaced
    - [ 1775893 ] in keyword does not use dict.has_key()
    - [ 1782493 ] jython --version doesn't show the java version number
    - [ 1782856 ] zxJDBC.Timestamp returns hours in AM/PM not 24 hour time
    - [ 1783960 ] can not exclude parts from text-mode installation